Remove a full stop

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Que informação dramática</h1>
-    <p>E voltei-me a deitar.</p>
+    <p>E voltei-me a deitar</p>
     <img src="images/ze.jpg"/>
   </body>
 </html>
